--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -56,6 +56,14 @@
             margin-top: 48px;
         }
 
+        .section__content {
+            @media (max-width: $lg) {
+                display: flex;
+                flex-direction: column;
+                gap: 40px;
+            }
+        }
+
         .section__header-title-bg {
             @media (max-width: $lg) {
                 font-size: 100px;
