--- a/src/scss/components/swiper.scss
+++ b/src/scss/components/swiper.scss
@@ -12,7 +12,7 @@
             margin: 0 75px;
         }
         @media (max-width: $md) {
-            margin: 0;
+            margin: 0 45px;
         }
 
         .swiper-slide {
@@ -75,6 +75,10 @@
         @media (max-width: 1600px) {
             left: 0;
         }
+        @media (max-width: $md) {
+            width: 40px;
+            height: 40px;
+        }
     }
 }
 
@@ -96,6 +100,11 @@
 
         @media (max-width: 1600px) {
             right: 0;
+        }
+
+        @media (max-width: $md) {
+            width: 40px;
+            height: 40px;
         }
     }
 
