--- a/src/scss/components/swiper.scss
+++ b/src/scss/components/swiper.scss
@@ -21,6 +21,13 @@
         }
     }
 
+    &--house-details {
+        .swiper-slide-image {
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
     img {
         width: 100%;
     }
