fix: card house about height

--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -76,7 +76,7 @@
 
     &--house-about {
         flex-direction: column;
-        background: none;
+        background-color: $colors-primary;
 
         @media (max-width: $lg) {
             width: 70%;
