--- a/src/scss/components/section.scss
+++ b/src/scss/components/section.scss
@@ -88,7 +88,7 @@
         .section__content {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            grid-auto-rows: auto;
+            grid-auto-rows: 1fr;
             gap: 50px 29px;
 
             @media (max-width: $lg) {
